console-setup (1.20) UNRELEASED; urgency=low

  [ Debconf templates translations ]
  * Belarusian. Closes: #447109
  * Galician. Closes: #447940

 -- Jacobo Tarrio <jtarrio@debian.org>  Thu, 25 Oct 2007 18:51:58 +0100

console-setup (1.19) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Fix additional ellipsis in keyboard-setup initscript. (Closes: #435285)

  [ Otavio Salvador ]
  * Provides keyboard-setup virtual package.
  
  [ Anton Zinoviev ]
  * ckbcomp: '#' is also a comment character.  Thanks to Matt Kraai,
    closes: #443709.

  [ Debconf templates translations ]
  * German. Closes: #438395

 -- Anton Zinoviev <zinoviev@debian.org>  Sun, 23 Sep 2007 20:10:44 +0300

console-setup (1.18) unstable; urgency=low

  * In d-i environment read the encoding from debian-installer/charset
    variable.

 -- Anton Zinoviev <zinoviev@debian.org>  Sun, 15 Jul 2007 23:50:29 +0300

console-setup (1.17) unstable; urgency=low

  * Add a manual page for ckbcomp.  Thanks to Vassilis Pandis,
    closes: #405005. 
  * Apply a patch by Colin Watson:
    - enable udebs;
    - remove unhelpful defaults for several questions;
    - allow preseeding of console-setup/modelcode,
      console-setup/layoutcode, console-setup/variantcode,
      console-setup/optionscode, and console-setup/fontsize;
    - remove outdated note about loadkeys in console-setup-udeb's
      description;
    - Add a few bits of installer integration to console-setup-udeb
      borrowed from kbd-chooser. 
    I disabled the code for making UTF-8 default charmap in d-i because
    there are locales which use other charmap.  However I made setupcon to
    always use UTF-8 in d-i environment.
  * Updated French and Dutch translations, new Portuguese.  Thanks to
    Pedro Ribeiro, Jean-Luc Coulon and Bart Cornelis.
    Closes: #424665, #425773, #426082.

 -- Anton Zinoviev <zinoviev@debian.org>  Sun, 15 Jul 2007 16:35:55 +0300

console-setup (1.16) unstable; urgency=low
